--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Freeze</h1>
+    <h1 style"color,red">Freeze</h1>
     <h1>contact</h1>
+    <h1>repostry</1>
 </body>
 </html>
